--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+	font-family: IRANSans;
+	font-style: normal;
+	font-weight: 900;
+	src: url('./assets/fonts/IRANSansWeb_Black.eot');
+	src: url('./assets/fonts/IRANSansWeb_Black.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
+		 url('./assets/fonts/IRANSansWeb_Black.woff') format('woff');
+}
+@font-face {
+	font-family: IRANSans;
+	font-style: normal;
+	font-weight: bold;
+	src: url('./assets/fonts/IRANSansWeb_Bold.eot');
+	src: url('./assets/fonts/IRANSansWeb_Bold.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
+		 url('./assets/fonts/IRANSansWeb_Bold.woff') format('woff');
+}
+@font-face {
+	font-family: IRANSans;
+	font-style: normal;
+	font-weight: 500;
+	src: url('./assets/fonts/IRANSansWeb_Medium.eot');
+	src: url('./assets/fonts/IRANSansWeb_Medium.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
+		 url('./assets/fonts/IRANSansWeb_Medium.woff') format('woff');
+}
+@font-face {
+	font-family: IRANSans;
+	font-style: normal;
+	font-weight: 300;
+	src: url('./assets/fonts/IRANSansWeb_Light.eot');
+	src: url('./assets/fonts/IRANSansWeb_Light.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
+		 url('./assets/fonts/IRANSansWeb_Light.woff') format('woff');
+}
+@font-face {
+	font-family: IRANSans;
+	font-style: normal;
+	font-weight: 200;
+	src: url('./assets/fonts/IRANSansWeb_UltraLight.eot');
+	src: url('./assets/fonts/IRANSansWeb_UltraLight.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
+		 url('./assets/fonts/IRANSansWeb_UltraLight.woff') format('woff');
+}
+@font-face {
+	font-family: IRANSans;
+	font-style: normal;
+	font-weight: normal;
+	src: url('./assets/fonts/IRANSansWeb.eot');
+	src: url('./assets/fonts/IRANSansWeb.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
+		 url('./assets/fonts/IRANSansWeb.woff') format('woff');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+body{
+	direction: rtl;
 }
